--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>NFTlanding</title>
 </head>
 <body>
-    
+    <nav> 
+        <div class="logo">
+
+        </div>
+
+    </nav>
 </body>
 </html>
