--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFTlanding</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,500;8..144,600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e26a8a1c30.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav> 
         <div class="logo">
-
+            <img src="assets/logo.svg">
         </div>
-
+        <ul class="menu">
+            <li><a href="#">Features</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Launch</a></li>
+            <li><a href="#">Sign Up</a></li>
+        </ul>
+        <div class="bars">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </nav>
 </body>
 </html>
