--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <div class="logo">
             <img src="assets/logo.svg">
         </div>
-            <ul>
+            <ul class="menu">
                 <li><a href="#">Features</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Launch</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="#" class="signup">Sign Up</a></li>
             </ul>
         <div class="bars">
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars fa-2x"></i>
         </div>
     </nav>
 </body>
