--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,500;8..144,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;800;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e26a8a1c30.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav> 
         <div class="logo">
-            <img src="assets/logo.svg">
+            <img src="assets/logo.svg" alt="logo">
         </div>
             <ul class="menu">
                 <li><a href="#">Features</a></li>
@@ -26,5 +28,19 @@
             <i class="fa-solid fa-bars fa-2x"></i>
         </div>
     </nav>
+    <div class="container1">
+        <div class="textbook1">
+            <h4>LAUNCHING SOON</h4>
+            <p class="headline">An NFT like no other</p>
+            <p class="missout">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+            <button class="button">Sign up</button>
+        </div>
+        <div class="illustration">
+            <img src="assets/graphic.svg" class="illustration">
+        </div>
+    </div>
+    <div class="middle">
+        <p class="banner">Free NFT for early birds</p>
+    </div>
 </body>
 </html>
