--- a/index.html
+++ b/index.html
@@ -41,6 +41,52 @@
     </div>
     <div class="middle">
         <p class="banner">Free NFT for early birds</p>
+        <p class="bannertext">Sign up today and you'll get a free NFT when we launch</p>
     </div>
+    <div class="brands">
+        <a href="#"><img src="assets/companies/1.svg"></a>
+        <a href="#"><img src="assets/companies/2.svg"></a>
+        <a href="#"><img src="assets/companies/3.svg"></a>
+        <a href="#"><img src="assets/companies/4.svg"></a>
+        <a href="#"><img src="assets/companies/5.svg"></a>
+    </div>
+    <div class="auction">
+        <div class="textbooknft">
+            <p>LE Super Rare Auction</p>
+            <p>We have released four limited edition NFTs early which can be bid on via <a href="#">OpenSea</a></p>
+        </div>
+        <div class="nfts">
+            <div class="nft1">
+                <img src="assets/ntfs/ntf-1.svg">
+            </div>
+            <div class="nft2">
+                <img src="assets/ntfs/nft-2.svg">
+            </div>
+            <div class="nft3">
+                <img src="assets/ntfs/ntf-3.svg">
+            </div>
+            <div class="nft4">
+                <img src="assets/ntfs/ntf-4.svg">
+            </div>
+        </div>
+    </div>
+    <div class="container2">
+        <div class="textbook2">
+            <h4>LAUNCHING SOON</h4>
+            <p class="headline">An NFT like no other</p>
+            <p class="missout">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+            <button class="button">Sign up</button>
+        </div>
+        <div class="illustration2">
+            <img src="assets/upsell-footer-image.svg">
+        </div>
+    </div>
+    <footer>
+        <div class="socials">
+            <img src="assets/logo.svg">
+        </div>
+        <div class="links"></div>
+        <p>@ Copyright 2022 NFTlanding</p>
+    </footer>
 </body>
 </html>
