--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
             <i class="fa-solid fa-bars fa-2x"></i>
         </div>
     </nav>
-    <div class="container1">
+    <section class="container1">
         <div class="textbook1">
             <h4>LAUNCHING SOON</h4>
             <p class="headline">An NFT like no other</p>
             <p class="missout">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
             <button class="button">Sign up</button>
         </div>
-        <div class="illustration">
+        <div class="robot">
             <img src="assets/graphic.svg" class="illustration">
         </div>
-    </div>
+    </section>
     <div class="middle">
         <p class="banner">Free NFT for early birds</p>
         <p class="bannertext">Sign up today and you'll get a free NFT when we launch</p>
@@ -73,7 +73,7 @@
     <div class="container2">
         <div class="textbook2">
             <h4>LAUNCHING SOON</h4>
-            <p class="headline">An NFT like no other</p>
+            <h2>An NFT like no other</h2>
             <p class="missout">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
             <button class="button">Sign up</button>
         </div>
