--- a/index.html
+++ b/index.html
@@ -48,26 +48,83 @@
         <a href="#"><img src="assets/companies/2.svg"></a>
         <a href="#"><img src="assets/companies/3.svg"></a>
         <a href="#"><img src="assets/companies/4.svg"></a>
-        <a href="#"><img src="assets/companies/5.svg"></a>
+        <a href="#"><img src="assets/companies/5.svg" class="5th"></a>
     </div>
     <div class="auction">
         <div class="textbooknft">
-            <p>LE Super Rare Auction</p>
-            <p>We have released four limited edition NFTs early which can be bid on via <a href="#">OpenSea</a></p>
+            <h3>LE Super Rare Auction</h3>
+            <p class="we">We have released four limited edition NFTs early which can be bid on via <a href="#" class="we">OpenSea</a></p>
         </div>
         <div class="nfts">
-            <div class="nft1">
+            <div class="nft">
                 <img src="assets/ntfs/ntf-1.svg">
+                <table class="nftxt">
+                        <tr>
+                            <th class="gs">GLOOP SERIES</th>
+                            <th>TOP BID</th>
+                        </tr>
+                        <tr>
+                            <td>Purple Man</td>
+                            <td><img src="assets/eth.svg"> 2.99 ETH</td>
+                        </tr>
+                        <tr>
+                            <td>#1283</td>
+                            <td>1 day left</td>
+                        </tr>  
+                </table>
             </div>
-            <div class="nft2">
+            <div class="nft">
                 <img src="assets/ntfs/nft-2.svg">
+                <table class="nftxt">
+                        <tr>
+                            <th class="gs">GLOOP SERIES</th>
+                            <th>TOP BID</th>
+                        </tr>
+                        <tr>
+                            <td>Beige</td>
+                            <td><img src="assets/eth.svg"> 2.99 ETH</td>
+                        </tr>
+                        <tr>
+                            <td>#1283</td>
+                            <td>1 day left</td>
+                        </tr>  
+                </table>
             </div>
-            <div class="nft3">
+            <div class="nft">
                 <img src="assets/ntfs/ntf-3.svg">
+                <table class="nftxt">
+                        <tr>
+                            <th class="gs">GLOOP SERIES</th>
+                            <th>TOP BID</th>
+                        </tr>
+                        <tr>
+                            <td>Red Man</td>
+                            <td><img src="assets/eth.svg"> 2.99 ETH</td>
+                        </tr>
+                        <tr>
+                            <td>#1283</td>
+                            <td>1 day left</td>
+                        </tr>  
+                </table>
             </div>
-            <div class="nft4">
+            <div class="nft">
                 <img src="assets/ntfs/ntf-4.svg">
+                <table class="nftxt">
+                        <tr>
+                            <th class="gs">GLOOP SERIES</th>
+                            <th>TOP BID</th>
+                        </tr>
+                        <tr>
+                            <td>Green</td>
+                            <td><img src="assets/eth.svg"> 2.99 ETH</td>
+                        </tr>
+                        <tr>
+                            <td>#1283</td>
+                            <td>1 day left</td>
+                        </tr>  
+                </table>
             </div>
+        
         </div>
     </div>
     <div class="container2">
