--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="#"><img src="assets/companies/2.svg"></a>
         <a href="#"><img src="assets/companies/3.svg"></a>
         <a href="#"><img src="assets/companies/4.svg"></a>
-        <a href="#"><img src="assets/companies/5.svg" class="5th"></a>
+        <a href="#"><img src="assets/companies/5.svg"></a>
     </div>
     <div class="auction">
         <div class="textbooknft">
@@ -130,7 +130,7 @@
     <div class="container2">
         <div class="textbook2">
             <h4>LAUNCHING SOON</h4>
-            <h2>An NFT like no other</h2>
+            <p class="headline">An NFT like no other</p>
             <p class="missout">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
             <button class="button">Sign up</button>
         </div>
@@ -141,8 +141,18 @@
     <footer>
         <div class="socials">
             <img src="assets/logo.svg">
+            <p>Exclusive NFT Collection</p>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-tiktok"></i>
         </div>
-        <div class="links"></div>
+        <div class="links">
+            <table class="about"></table>
+            <table class="nfttt"></table>
+            <table clas="contact"></table>
+            <table class="social"></table>
+        </div>
         <p>@ Copyright 2022 NFTlanding</p>
     </footer>
 </body>
